--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bmv-777.github.io/social-network",
   "name": "social_network",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "predeploy": "npm run build",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "eslint": "^8.34.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4"
